# inspect-cert-chain

./: .cspell.yml  .git-cliff.toml  .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile  release-plz.toml
.github/workflows/: ci.yml  dependabot.yml  deploy.yml  lint.yml  release.yml
roots/: ietf-org-chain.pem
src/: ext.rs  fetch.rs  info.rs  logging.rs  main.rs  tui.rs  util.rs
