[package]
name = "inspect-cert-chain"
version = "0.0.17"
description = "OpenSSL-like text output for debugging certificate chains"
authors = ["Rob Ede <robjtede@icloud.com>"]
keywords = ["inspect", "cert", "chain", "openssl", "x509"]
repository = "https://github.com/robjtede/inspect-cert-chain"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.68"

[dependencies]
arboard = { version = "3", default-features = false }
byteorder = "1"
camino = "1"
cfg-if = "1"
chrono = "0.4.38"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
const-oid = { version = "0.9.6", features = ["std", "db"] }
crossterm = "0.27"
der = { version = "0.7", features = ["std"] }
error_reporter = "1"
eyre = "0.6"
itertools = "0.13"
pem-rfc7468 = { version = "0.7", features = ["std"] }
pkcs1 = { version = "0.7", features = ["std"] }
ratatui = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1"
tracing = { version = "0.1.30", features = ["log", "release_max_level_debug"] }
tracing-subscriber = "0.3"
webpki-roots = "0.26"
x509-cert = { version = "0.2.5", features = ["sct"] }

[profile.release]
lto = true
codegen-units = 1
